added some todo comments and some details to the images

--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,9 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+/* Need to add custom assets */
+
+/* Need to add levels to the repo */
+
+/* need to add some music possibly and some animations for flips */
